--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -2,14 +2,22 @@ security:
     encoders:
         App\Entity\Admin:
             algorithm: auto
+        App\Entity\User:
+            algorithm: auto
+
 
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
         # used to reload user from session & other features (e.g. switch_user)
         app_user_provider:
             entity:
+                class: App\Entity\User
+                property: email
+        app_admin_provider:
+            entity:
                 class: App\Entity\Admin
                 property: email
+        # used to reload user from session & other features (e.g. switch_user)
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
@@ -20,7 +28,9 @@ security:
             provider: app_user_provider
             guard:
                 authenticators:
-                    - App\Security\AuthenticatorAppAuthenticator
+                    - App\Security\AppAuthenticator
+                    - App\Security\AdminAuthenticator
+                entry_point: App\Security\AppAuthenticator
             logout:
                 path: app_logout
                 # where to redirect after logout
