--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -27,9 +27,8 @@ security:
             lazy: true
             provider: app_user_provider
             guard:
-                authenticators:
+                authenticators: 
                     - App\Security\AppAuthenticator
-                    - App\Security\AdminAuthenticator
                 entry_point: App\Security\AppAuthenticator
             logout:
                 path: app_logout
@@ -45,5 +44,10 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/agent, roles: ROLE_AGENT }
+        - { path: ^/leaseowner, roles: ROLE_LEASEOWNER }
+        - { path: ^/owner, roles: ROLE_OWNER }
+        - { path: ^/user, roles: ROLE_USER }
+    role_hierarchy:
+        ROLE_ADMIN: [ROLE_AGENT, ROLE_LEASEOWNER, ROLE_OWNER, ROLE_USER]
