--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -48,6 +48,7 @@ security:
         - { path: ^/agent, roles: ROLE_AGENT }
         - { path: ^/leaseowner, roles: ROLE_LEASEOWNER }
         - { path: ^/owner, roles: ROLE_OWNER }
+        - { path: ^/tenant, roles: ROLE_TENANT }
         - { path: ^/user, roles: ROLE_USER }
     role_hierarchy:
-        ROLE_ADMIN: [ROLE_AGENT, ROLE_LEASEOWNER, ROLE_OWNER, ROLE_USER]
+        ROLE_ADMIN: [ROLE_AGENT, ROLE_LEASEOWNER, ROLE_OWNER, ROLE_TENANT, ROLE_USER]
