--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -49,6 +49,6 @@ security:
         - { path: ^/leaseowner, roles: ROLE_LEASEOWNER }
         - { path: ^/owner, roles: ROLE_OWNER }
         - { path: ^/tenant, roles: ROLE_TENANT }
-        - { path: ^/user, roles: ROLE_USER }
+        - { path: ^/user|^/message, roles: ROLE_USER }
     role_hierarchy:
         ROLE_ADMIN: [ROLE_AGENT, ROLE_LEASEOWNER, ROLE_OWNER, ROLE_TENANT, ROLE_USER]
