--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,6 +5,7 @@
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
     app.locales: [en, fr]
+    images_directory: '%kernel.project_dir%/public/images/announces'
 
 services:
     # default configuration for services in *this* file
