--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -44,12 +44,9 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        access_control:
         - { path: ^/admin, roles: ROLE_ADMIN }
-        - { path: ^/document|^/message, roles: ROLE_AGENT }
-        - { path: ^/document|^/message, roles: ROLE_LEASEOWNER }
-        - { path: ^/document|^/message, roles: ROLE_OWNER }
-        - { path: ^/document|^/message, roles: ROLE_TENANT }
-        - { path: ^/document|^/message, roles: ROLE_USER }
+        - { path: ^/document, roles: [ROLE_AGENT, ROLE_LEASEOWNER, ROLE_OWNER, ROLE_TENANT] }
+        - { path: ^/message, roles: [ROLE_AGENT, ROLE_LEASEOWNER, ROLE_OWNER, ROLE_TENANT] }
+        
     role_hierarchy:
         ROLE_ADMIN: [ROLE_AGENT, ROLE_LEASEOWNER, ROLE_OWNER, ROLE_TENANT, ROLE_USER]
